# grisbi

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  Brewfile  ChangeLog  INSTALL  INSTALL.CVS  INSTALL.MacOSX  INSTALL.git  Makefile.am  Makefile.in  NEWS  OLDNEWS  README  README.md  acconfig.h  aclocal.m4  appveyor.yml  autogen.osx-darwinports.sh  autogen.sh  autogen.slack.sh  c.sh  config.h.in  configure  configure.ac  configure.in  doxygen.conf  grisbi.1  grisbi.spec  installer_strings.nsh  meson.build  meson.options  mkinstalldirs  travis-autogen.sh  windows_installer.nsi
applet/: Makefile.am  Makefile.in  en_tete.h  grisbi_applet.c  grisbi_applet.desktop  grisbi_applet.gnorba  variables.c
applet/xpm/: g1.xpm  g13.xpm  g2.xpm  g3.xpm  g5.xpm  g8.xpm  g9.xpm
help/: Makefile  Makefile.am  Makefile.in  meson.build
help/C/: Makefile  Makefile.am  Makefile.in  grisbi-manuel.html  grisbi-manuel001.html  grisbi-manuel002.html  grisbi-manuel003.html  grisbi-manuel004.html  grisbi-manuel005.html  grisbi-manuel006.html  grisbi-manuel007.html  grisbi-manuel008.html  grisbi-manuel009.html  grisbi-manuel010.html  grisbi-manuel011.html  grisbi-manuel012.html  grisbi-manuel013.html  grisbi-manuel014.html  grisbi-manuel015.html  grisbi-manuel016.html  grisbi-manuel017.html  grisbi-manuel018.html  grisbi-manuel019.html  grisbi-manuel020.html  grisbi-manuel021.html  grisbi-manuel022.html  grisbi-manuel023.html  grisbi-manuel024.html  grisbi001.html  grisbi002.html  grisbi003.html  grisbi004.html  grisbi005.html  grisbi006.html  grisbi007.html  grisbi008.html  grisbi009.html  grisbi010.html  grisbi011.html  grisbi012.html  (+10 more)
help/de/: Makefile.am  grisbi-manuel.css  grisbi-manuel.html  quickstart.html  translation.html
help/en/: Makefile.am  grisbi-manuel.html  quickstart.html  translation.html
help/fr/: Makefile  Makefile.am  Makefile.in  grisbi-manuel-1page.html  grisbi-manuel.css  grisbi-manuel.html  grisbi-manuel001.html  grisbi-manuel002.html  grisbi-manuel003.html  grisbi-manuel004.html  grisbi-manuel005.html  grisbi-manuel006.html  grisbi-manuel007.html  grisbi-manuel008.html  grisbi-manuel009.html  grisbi-manuel010.html  grisbi-manuel011.html  grisbi-manuel012.html  grisbi-manuel013.html  grisbi-manuel014.html  grisbi-manuel015.html  grisbi-manuel016.html  grisbi-manuel017.html  grisbi-manuel018.html  grisbi-manuel019.html  grisbi-manuel020.html  grisbi-manuel021.html  grisbi-manuel022.html  grisbi-manuel023.html  grisbi-manuel024.html  grisbi-manuel025.html  index.html  quickstart.html  translation.html
help/tips/: .cvsignore  Makefile.am  de.po  es.po  fr.po  tips.pot  tips.txt
macros/: ChangeLog  Makefile.am  Makefile.in  autogen.sh  g2banking.m4  gnome-config-benj.m4  gnome-x-checks.m4
pixmaps/: Makefile  Makefile.am  Makefile.am~  Makefile.in  meson.build  new-categs.xcf
pixmaps/flags/: Makefile.am
po/: .cvsignore  .gitignore  ChangeLog  LINGUAS  Makefile.in  Makefile.in.in  Makevars  POTFILES.in  POTFILES.skip  cs.po  da.po  de.po  dk.po  dk.pot  el.po  en.po  en_GB.po  en_US.po  eo.po  es.po  es_ca.po  fa.po  fr.mo  fr.po  grisbi.pot  he.po  it.po  lv.po  meson.build  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sv.po  zh_CN.po
share/: .gitignore  Makefile.am  appveyor-build.sh  appveyor-install.sh  create_git_distrib.sh  grisbi.desktop  grisbi.desktop.in  grisbi.metainfo.xml  grisbi.metainfo.xml.in  grisbi.nsi.in  grisbi.xml  msys2-extra-install-hook.sh
share/categories/: Makefile.am
src/: .cvsignore  .gitignore  Makefile.am  Makefile.in  account_constants.h  accueil.c  accueil.h  accueil_constants.h  affichage.c  affichage.h  affichage_formulaire.c  affichage_formulaire.h  affichage_liste.c  affichage_liste.h  affichage_liste_constants.h  balance_estimate_config.c  balance_estimate_config.h  balance_estimate_data.c  balance_estimate_data.h  balance_estimate_future.c  balance_estimate_future.h  balance_estimate_hist.c  balance_estimate_hist.h  balance_estimate_tab.c  balance_estimate_tab.h  banque.c  banque.h  barre_outils.c  barre_outils.h  bet_config.c  bet_config.h  bet_data.c  bet_data.h  bet_data_finance.c  bet_data_finance.h  bet_finance_ui.c  bet_finance_ui.h  bet_future.c  bet_future.c.new  bet_future.h  (+484 more)
src/etats/: Makefile.am  etats_page_accounts.c  etats_page_accounts.h  etats_page_accounts.ui  etats_page_amount.c  etats_page_amount.h  etats_page_amount.ui  etats_page_budget.c  etats_page_budget.h  etats_page_budget.ui  etats_page_category.c  etats_page_category.h  etats_page_category.ui  etats_page_payee.c  etats_page_payee.h  etats_page_payee.ui  etats_page_period.c  etats_page_period.h  etats_page_period.ui  etats_page_text.c  etats_page_text.h  etats_page_text.ui  etats_page_transfer.c  etats_page_transfer.h  etats_page_transfer.ui
src/images/: Makefile.am
src/plugins/: README
src/prefs/: Makefile.am  prefs_page_accueil.c  prefs_page_accueil.h  prefs_page_accueil.ui  prefs_page_archives.c  prefs_page_archives.h  prefs_page_archives.ui  prefs_page_bank.c  prefs_page_bank.h  prefs_page_bank.ui  prefs_page_bet_account.c  prefs_page_bet_account.h  prefs_page_bet_account.ui  prefs_page_bet_general.c  prefs_page_bet_general.h  prefs_page_bet_general.ui  prefs_page_currency.c  prefs_page_currency.h  prefs_page_currency_link.c  prefs_page_currency_link.h  prefs_page_display_adr.c  prefs_page_display_adr.h  prefs_page_display_adr.ui  prefs_page_display_fonts.c  prefs_page_display_fonts.h  prefs_page_display_fonts.ui  prefs_page_display_form.c  prefs_page_display_form.h  prefs_page_display_form.ui  prefs_page_display_gui.c  prefs_page_display_gui.h  prefs_page_display_ope.c  prefs_page_display_ope.h  prefs_page_display_ope.ui  prefs_page_divers.c  prefs_page_divers.h  prefs_page_divers.ui  prefs_page_exer.c  (+39 more)
win32-mingw/: .gitignore  CMakeLists.txt  build-clean.cmd  build.cmd  config.h.cmake  generate.cmd  package.cmd  prepare_Win32.cmd  wiki.txt  windows_installer.nsi
win32-msvc/: .cvsignore  CMakeLists.txt  build.cmd  config.h  generate.cmd  installer_strings.nsh  package.cmd  prepare.cmd  prepare_Win32.cmd  wiki.txt  windows_installer.nsi
(+1432 files in other folders)
